--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,21 +1,19 @@
-name: auto deploy to api.aestheticdental.org
 on:
   push:
     branches:
       - master
+name: 🚀 Deploy website on push
 jobs:
-  build:
-    name: Deploy on push to master
+  web-deploy:
+    name: 🎉 Deploy
     runs-on: ubuntu-latest
     steps:
-    - name: executing remote ssh commands to pull from main branch to staging
-      uses: appleboy/ssh-action@v0.1.10
+    - name: 🚚 Get latest code
+      uses: actions/checkout@v3
+    
+    - name: 📂 Sync fisles
+      uses: SamKirkland/FTP-Deploy-Action@v4.3.4
       with:
-        server: ${{ secrets.HOST }}
-        username: ${{ secrets.USERNAME }}
-        password: ${{ secrets.password }}
-        script: |
-          cd api
-          export PATH=/opt/cpanel/ea-php81/root/bin:$PATH
-          rm composer.lock
-          git pull origin master
+        server: ${{ secrets.Host }}
+        username: ${{ secrets.ftp_username }}
+        password: ${{ secrets.ftp_password }}
